--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -1,45 +1,50 @@
-h1 {
-    font-size:28px;
-}
-
-section, footer {
-  padding: 2px 10px;
-}
-ul {
-  margin: 0px;
-}
-
-#position {
-  font-size: 18pt;
-}
-.summary {
-  font-size: 16pt;
-}
-
-h2 {
-  color: #2F5A78;
-  font-size: 20px;
-}
-
-body {
-  font-family: Arial;
-}
-#position {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-h1 {
-  font-size: 28px;
-  text-transform: uppercase;
-}
-.summary {
-  font-size: 16px;
-  line-height: 20px;
-}
-header {
-  text-align: center;
-}
-#copyright {
-  text-align: center;
-}
+<!DOCTYPE html>
+<html>
+    <body>
+        <header>
+        <h1>Sivenathi Lange</h1>
+        <p id="position">Software Engineer</p>
+        </header>
+        <section>
+        <h2>Summary</h2>
+        <p class="summary"><img src="https://cdn2.iconfinder.com/data/icons/avatars-99/62/avatar-370-456322-512.png" width="80px" alt="">
+        Deadline-oriented software engineer with lots of experience. Solid track record of architecting solutions that exceed client expectations.</p>
+        </section>
+        <section>
+        <h2>Experience</h2>
+        <ul id="experience">
+            <li>
+                <b>Senior Software Engineer - Google</b> | 2018 - Present
+            </li>
+            <li>
+                <b> Software Engineer - Facebook</b> | 2016 - 2018
+            </li>
+        </ul>
+        </section>
+        <section>
+        <h2>Skills</h2>
+        <table id="skills">
+            <tr><th>Skill</th><th>Level</th></tr>
+            <tr><td>HTML</td><td>Expert</td></tr>
+            <tr><td>CSS</td><td>Intermediate</td></tr>
+        </table>
+        </section>
+        <section>
+            <h2>Contact Form</h2>
+            <form id="contact-form">
+                <label for="name">Name: </label><input placeholder="Name" id="name" type="text" /><br>
+                <label for="email">Email: </label><input placeholder="Email" id="email" type="email" /><br>
+                <textarea placeholder="Message"></textarea><br>
+                <input type="submit" value="SEND">
+            </form>
+        </section>
+        <footer>
+        <h2>Contacts</h2>
+        <ul id="contacts">
+        <li><a href="link1" target="_blank">Sololearn</a></li>
+        <li><a href="link2" target="_blank">LinkedIn</a></li>
+        </ul>
+        <p id="copyright">Copyright &copy; John Smith</p>
+        </footer>
+    </body>
+</html>
